# PseudocodeTranspiler

./: .gitignore  Pseudocode.opam  README.md  ast.cmi  ast.ml  dune-project  lexer.cmo  lexer.ml  makefile  output.py  parser.mll  test.txt  test_lexer  test_lexer.ml
.github/workflows/: ocaml.yml
lib/: ast.ml  dune  java.ml  lexer.mll  parser.mly  python.ml  test.txt  test2.pseudo  type_reconstruction.ml  utils.ml
src/: ast.ml  dune  output.py  parser.mly  pseudo.ml  pseudolibrary.py  test.txt
src/pseudo/: ast.cmo  ast.ml  dune  lexer.cmi  lexer.mll  output.py  parser.ml  parser.mli  parser.mly  pseudo.ml  test.txt
src/pseudo/classes/: binarytree.py  linkedlist.py
tests/: arithmetic_parser_test.ml  dune  test_suite.ml
tests/acceptance/: acceptance_test.ml  acceptance_test_suite.ml  dune  test_expected_python.py  test_input.pseudo
tests/arithmetic/: arithmetic_test_suite.ml  dune  parser_test.ml
tests/control_flow/: control_flow_test_suite.ml  dune  for_loops_test.ml  parser_test.ml
tests/lexer/: dune  lexer_test_suite.ml  token_test.ml
tests/python_backend/: dune  python_backend_test.ml  python_backend_test_suite.ml
