(library
 (name acceptance_tests)
 (libraries pseudo_lib ounit2))
 
(install
 (section share)
 (files test_input.pseudo test_expected_python.py))

; This dune file should be copied to any other folder in the tests directory.
; Just remember to change the name of the library and then import the library
; in the dune file of the parent directory.